@@ -43,7 +43,10 @@ public class SecurityConfig {
                     @Override
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                         CorsConfiguration configuration = new CorsConfiguration();
-                        configuration.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
+                        configuration.setAllowedOrigins(Arrays.asList(
+                            "http://localhost:5173",  // PC 환경
+                            "https://192.168.244.4:5173" // 모바일 환경
+                        ));
                         configuration.setAllowedMethods(Collections.singletonList("*"));
                         configuration.setAllowCredentials(true);
                         configuration.setAllowedHeaders(Collections.singletonList("*"));
@@ -66,7 +69,7 @@ public class SecurityConfig {
                         .successHandler(customSuccessHandler)
                 )
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/api/users/register","/api/users/send-verification-code","/api/users/verify-code", "/api/users/check-userId", "/api/users/check-email","/api/users/login","/api/chat/**").permitAll() // 사용자 등록 및 로그인 허용
+                        .requestMatchers("/api/users/addUserInfo/**","/api/users/register","/api/users/send-verification-code","/api/users/verify-code", "/api/users/check-userId","api/users/show/", "/api/users/check-email","/api/users/style","api/users/style/","/api/users/login","/api/chat/**").permitAll() // 사용자 등록 및 로그인 허용
                         .requestMatchers("/").permitAll()
                         .anyRequest().authenticated() // 나머지 요청은 인증 필요
                 )
@@ -84,8 +87,9 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOrigins(List.of("http://localhost:5173")); // React 앱의 출처
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")); // 허용할 메서드
-        configuration.setAllowedHeaders(List.of("*")); // 허용할 헤더
-        configuration.setAllowCredentials(true); // 자격 증명 허용
+        configuration.setAllowedHeaders(List.of("*")); // 허용할 헤더 configuration.setAllowCredentials(true);
+        //configuration.setExposedHeaders(Arrays.asList("Authorization", "Set-Cookie"));
+        //configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/api/**", configuration); // CORS 설정 등록
